test/conformance/chainsaw/generate/foreach/existing/cpol-clone-sync-create/1-1-source.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-ns-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: foreach-ns-2
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: source-secret
  namespace: default
type: Opaque
---
kind: ConfigMap
apiVersion: v1
metadata:
  name: default-deny
  namespace: default
data:
  namespaces: foreach-ns-1,foreach-ns-2
