test/conformance/chainsaw/generate/foreach/existing/cpol-clone-sync-create/2-1-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: foreach-cpol-clone-sync-create
spec:
  rules:
  - match:
      any:
      - resources:
          kinds:
          - ConfigMap
    name: k-kafka-address
    context:
    - name: configmapns
      variable:
        jmesPath: request.object.metadata.namespace
    preconditions:
      any:
      - key: '{{configmapns}}'
        operator: Equals
        value: 'default'
    generate:
      generateExisting: true
      synchronize: true
      foreach:
        - list: request.object.data.namespaces | split(@, ',')
          context:
          - name: ns
            variable:
              jmesPath: element
          preconditions:
            any:
            - key: '{{ ns }}'
              operator: AnyIn
              value:
              - foreach-ns-1
          apiVersion: v1
          kind: Secret
          name: cloned-secret-{{ elementIndex }}-{{ ns }}
          namespace: '{{ ns }}'
          clone:
            namespace: default
            name: source-secret
