test/conformance/chainsaw/generate/foreach/existing/cpol-clone-sync-create/3-1-cloned-target.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: cloned-secret-0-foreach-ns-1
  namespace: foreach-ns-1
type: Opaque
