test/conformance/chainsaw/generate/foreach/existing/cpol-clone-sync-create/3-2-no-cloned-target.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: cloned-secret-0-foreach-ns-2
  namespace: foreach-ns-2
type: Opaque
