test/conformance/chainsaw/generate/foreach/existing/cpol-clone-sync-create/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-data-sync-create
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: 1-1-source.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: 2-1-policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: foreach-cpol-clone-sync-create
  - name: step-03
    try:
    - apply:
        file: 3-1-cloned-target.yaml
    - error:
        file: 3-2-no-cloned-target.yaml
